--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,8 @@
-# Site-wide settings
-# ------------------
-#
 title: Khasanov's Blog
-
 author:
- name: Rakhmatjon Khasanov
- email: r.khasanov97@gmail.com
-#
-# The `>` after `description:` means to ignore line-breaks until next key. If
-#   you wish to omit the line-break after the end of text, use `>-` instead.
+  name: Rakhmatjon Khasanov
+  email: r.khasanov97@gmail.com
+
 description: >
   Welcome to my blog – a space where I share insights on software development,
   lifelong learning, productivity, and personal growth. From coding tutorials
@@ -16,39 +10,15 @@ description: >
   this blog is dedicated to helping curious minds grow with clarity, consistency,
   and creativity.
 
-
-# Build settings
-# --------------
-#
-# If you wish to use the gem-version of Minima with or without a Gemfile, use
-#   the following setting:
 theme: minima
-#
-# **OR** if you wish to use the theme directly from the GitHub repository by
-#   bypassing a Gemfile, use the following setting instead.
-#   It is best that you lock to a particular commit and update if uptream changes
-#   do not affect your site adversely.
-# remote_theme: jekyll/minima@d4d779a
-#
-# Minima requires the following plugins:
 plugins:
-- jekyll-feed
-- jekyll-seo-tag
-#
-# Uncomment the following setting if you wish to disable deprecation warnings
-#   from newer versions of sass converter. Adapt as required.
+  - jekyll-feed
+  - jekyll-seo-tag
 sass:
- quiet_deps: true
- silence_deprecations: [import]
+  quiet_deps: true
+  silence_deprecations: [import]
 
-
-# Minima-specific settings (applicable to Minima v3 and above only)
-# -----------------------------------------------------------------
-#
-#  *All described config keys below should be nested under the top-level
-#   `minima` key.*
-#
- minima:
+minima:
 #   Minima skin selection. Available skins are:
 #     * classic            Default, light color scheme.
 #     * dark               Dark variant of the classic skin.
@@ -63,16 +33,16 @@ sass:
 #     and list the `path` property (as represented via Liquid) of the pages in
 #     the order they should be rendered.
    nav_pages:
-#     - about.md
-#
+     - about.md
+
 #   Set to `true` to show excerpts on the homepage.
    show_excerpts: false
-#
+
 #   Minima date format.
 #     The default value is "%b %d, %Y" (e.g. Nov 14, 2023).
 #     Refer to https://shopify.github.io/liquid/filters/date/ for valid values
-   date_format: "%b-%d-%Y"
-#
+#   date_format: "%b-%d-%Y"
+
 #   Social Media Links.
 #     Renders icons via Font Awesome Free webfonts CDN, based on ordered list of
 #     entries. Valid entry keys:
@@ -89,9 +59,3 @@ sass:
      - title: Rakhmatjon Khasanov
        icon: linkedin
        url: "https://www.linkedin.com/in/rakhmatjon-khasanov"
-#
-#   Hide syndication feed subscription link.
-#     RSS / Atom feed link is always rendered as the last item of social-links
-#     list. Set below key to `true` to not have the link to feed rendered as
-#     part of social-links list.
-   hide_site_feed_link: false
