--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,16 @@ description: >
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
   - jekyll-seo-tag
 sass:
   quiet_deps: true
   silence_deprecations: [import]
+
+
+nav:
+  - name: "About"
+    link: "https://khasanovr.github.io"
 
 minima:
 #   Minima skin selection. Available skins are:
@@ -26,17 +32,10 @@ minima:
 #     * solarized-light    Light variant of solarized color scheme.
 #     * solarized-dark     Dark variant of solarized color scheme.
 #     * solarized          Adaptive skin for solarized color scheme skins.
-   skin: auto
-#
-#   Specific pages for site navigation.
-#     If you wish to link only specific pages in the site-navigation, use this
-#     and list the `path` property (as represented via Liquid) of the pages in
-#     the order they should be rendered.
-   nav_pages:
-     - about.md
+   skin: classic
 
 #   Set to `true` to show excerpts on the homepage.
-   show_excerpts: false
+   show_excerpts: true
 
 #   Minima date format.
 #     The default value is "%b %d, %Y" (e.g. Nov 14, 2023).
